[build-system]
requires = ["setuptools >= 60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capillaryFinder"
version = "1.0.0"
requires-python = ">= 3.10"
dependencies = ["numpy", "matplotlib", "scipy"]
authors = [{name = "Kenneth P. Marshall", email = "kenneth.marshall@esrf.fr"}]
maintainers = [{name = "Kenneth P. Marshall", email = "kenneth.marshall@esrf.fr"}]
description = "functions for finding capillaries on Z scans on BM31"
readme = {file = "README.MD", content-type = "text/markdown"}
keywords = ["capillaries", "sample alignment"]
classifiers = [
"Development Status :: 4 - Beta",
"Programming Language :: Python :: 3.12"]

[project.scripts]
plotZscan = "capFinderBM31.plotZscan:main"

[tool.setuptools]
packages = ["capFinderBM31"]

